--- a/contacto.html
+++ b/contacto.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/Proyecto Frontend/style-contacto.css">
+    <link rel="stylesheet" href="/Proyecto Frontend/Proyecto_Bootcamp_Frontend/style-contacto.css">
     <link rel="stylesheet" href="https://unpkg.com/transition-style">
     <title>Contacto</title>
 </head>
