--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
-    <link rel="stylesheet" href="/Proyecto Frontend/style.css">
+    <link rel="stylesheet" href="/Proyecto Frontend/Proyecto_Bootcamp_Frontend/style.css">
     <link rel="stylesheet" href="https://unpkg.com/transition-style">
     
 
