--- a/carrito.html
+++ b/carrito.html
@@ -31,7 +31,7 @@
             </form>
         </div>
     </section>
-    <script src="/Proyecto Frontend/carrito.js"></script>
+    <script src="/Proyecto Frontend/Proyecto_Bootcamp_Frontend/carrito.js"></script>
     
 </body>
 </html>
