--- a/contacto.html
+++ b/contacto.html
@@ -27,6 +27,6 @@
 
         </div>
     </section>
-    <script a src="/Proyecto Frontend/contact.js"></script>
+    <script a src="/Proyecto Frontend/Proyecto_Bootcamp_Frontend/contact.js"></script>
 </body>
 </html>
