--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
     <link rel="stylesheet" href="/Proyecto Frontend/Proyecto_Bootcamp_Frontend/style.css">
     <link rel="stylesheet" href="https://unpkg.com/transition-style">
     
-
     <title>MotoByte Refacciones</title>
 </head>
 <body>
@@ -34,6 +33,6 @@
     <footer>
         <h6>2023</h6>
     </footer>
-    <script src="/Proyecto Frontend/main.js"></script>
+    <script src="/Proyecto Frontend/Proyecto_Bootcamp_Frontend/main.js"></script>
 </body>
 </html>
