--- a/quiensomos.html
+++ b/quiensomos.html
@@ -28,6 +28,6 @@
             <h4>Somos una empresa orgullosamente Mexicana</h4>
         </div>
     </section>
-    <script src="/Proyecto Frontend/quiensomos.js"></script>
+    <script src="/Proyecto Frontend/Proyecto_Bootcamp_Frontend/quiensomos.js"></script>
 </body>
 </html>
