--- a/productos.html
+++ b/productos.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
     <link rel="stylesheet" href="/Proyecto Frontend/Proyecto_Bootcamp_Frontend/style-producto.css">
     <link rel="stylesheet" href="https://unpkg.com/transition-style">
     <title>Productos</title>
@@ -148,6 +149,6 @@
 
         </div>
     </section>
-    <script a src="/Proyecto Frontend/product.js"></script>
+    <script a src="/Proyecto Frontend/Proyecto_Bootcamp_Frontend/product.js"></script>
 </body>
 </html>
