--- a/carrito.html
+++ b/carrito.html
@@ -27,7 +27,13 @@
     <section>
         <div class="container">
             <form>
-
+                <label for="email">Correo electrónico</label>
+                <input type="email" name="email" id="email">
+                <input type="text" name="nombre"  >
+                <label>Selecciona el producto de tu interés</label>
+                <select name="product-id" id="products-select">
+                </select>
+                <button>Enviar</button>
             </form>
         </div>
     </section>
