--- a/categorias/Categoria_2/categoria2.html
+++ b/categorias/Categoria_2/categoria2.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="/Proyecto Frontend/Proyecto_Bootcamp_Frontend/categorias/Categoria_2/categoria2.css">
     <link rel="stylesheet" href="https://unpkg.com/transition-style">
 
-    <title>Categoria2</title>
+    <title>Balatas Delanteras</title>
 </head>
 <body>
     <header>
