--- a/categorias/Categoria_5/categoria5.html
+++ b/categorias/Categoria_5/categoria5.html
@@ -5,11 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
-    <link rel="stylesheet" href="/Proyecto Frontend/Proyecto_Bootcamp_Frontend/categorias/Categoria_1/categoria1.css">
+    <link rel="stylesheet" href="/Proyecto Frontend/Proyecto_Bootcamp_Frontend/categorias/Categoria_5/categoria5.css">
     <link rel="stylesheet" href="https://unpkg.com/transition-style">
 
-    <title>Escapes</title>
-</head>
+    <title>Candados</title>
+</head5
 <body>
     <header>
         <img class="img-logo" src="/Proyecto Frontend/Proyecto_Bootcamp_Frontend/images/logo.jpg" alt="Logo" transition-style="in:polygon:opposing-corners">
@@ -38,7 +38,7 @@
             </form>
         </div>
     </section>
-    <script src="/Proyecto Frontend/Proyecto_Bootcamp_Frontend/categorias/Categoria_1/categoria1.js"></script>
+    <script src="/Proyecto Frontend/Proyecto_Bootcamp_Frontend/categorias/Categoria_5/categoria5.js"></script>
     
 </body>
 </html>
