--- a/categorias/Categoria_1/categoria1.html
+++ b/categorias/Categoria_1/categoria1.html
@@ -27,7 +27,7 @@
 
     <section>
         <div class="container">
-            <form>
+            <form id="products" action="https://formspree.io/f/xvonnbbk" method="POST">
                 <label for="email">Correo electrónico</label>
                 <input type="email" name="email" id="email">
                 <input type="text" name="nombre"  >
