--- a/categorias/Categoria_1/categoria1.html
+++ b/categorias/Categoria_1/categoria1.html
@@ -35,7 +35,7 @@
                 <label for="phone">Telefono</label>
                 <input type="text" name="phone">
 
-                <label>Selecciona el Escape de tu interes</label>
+                <label>Selecciona el Escape que deseas</label>
                 <select name="product-id" id="products-select">
                 </select>
                 <button>Enviar</button>
