--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     
     <link rel="stylesheet" href="https://unpkg.com/transition-style">
     
-    <title>MotoByte Refacciones</title>
+    <title>MotoByte Refacciones 1</title>
 </head>
 <body>
     <header>
