--- a/categorias/Categoria_3/categoria3.html
+++ b/categorias/Categoria_3/categoria3.html
@@ -1,26 +1,26 @@
-<!DOCTYPE html>
+!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
-    <link rel="stylesheet" href="/Proyecto Frontend/Proyecto_Bootcamp_Frontend/categorias/Categoria_3/categoria3.css">
+    <link rel="stylesheet" href="/Proyecto_Bootcamp_Frontend/categorias/Categoria_3/categoria3.css">
     <link rel="stylesheet" href="https://unpkg.com/transition-style">
 
     <title>Clutchs Completos</title>
 </head>
 <body>
     <header>
-        <img class="img-logo" src="/Proyecto Frontend/Proyecto_Bootcamp_Frontend/images/logo.jpg" alt="Logo" transition-style="in:polygon:opposing-corners">
+        <img class="img-logo" src="/Proyecto_Bootcamp_Frontend/images/logo.jpg" alt="Logo" transition-style="in:polygon:opposing-corners">
         <button class="abrir-menu" id="abrir"><i class="bi bi-list"></i></button>
         <nav class="nav" id="nav">
             <button class="cerrar-menu" id="cerrar"><i class="bi bi-x-circle"></i></button>
             <ul class="nav-list">
-                <li><a href="/Proyecto Frontend/Proyecto_Bootcamp_Frontend/index.html" transition-style="in:polygon:opposing-corners">Inicio</a></li>
-                <li><a href="/Proyecto Frontend/Proyecto_Bootcamp_Frontend/productos.html" transition-style="in:polygon:opposing-corners">Productos</a></li>
-                <li><a href="/Proyecto Frontend/Proyecto_Bootcamp_Frontend/quiensomos.html" transition-style="in:polygon:opposing-corners">Quienes somos</a></li>
-                <li><a href="/Proyecto Frontend/Proyecto_Bootcamp_Frontend/contacto.html" transition-style="in:polygon:opposing-corners">Contacto</a></li>
+                <li><a href="/Proyecto_Bootcamp_Frontend/index.html" transition-style="in:polygon:opposing-corners">Inicio</a></li>
+                <li><a href="/Proyecto_Bootcamp_Frontend/productos.html" transition-style="in:polygon:opposing-corners">Productos</a></li>
+                <li><a href="/Proyecto_Bootcamp_Frontend/quiensomos.html" transition-style="in:polygon:opposing-corners">Quienes somos</a></li>
+                <li><a href="/Proyecto_Bootcamp_Frontend/contacto.html" transition-style="in:polygon:opposing-corners">Contacto</a></li>
             </ul>
         </nav>
     </header>
@@ -42,7 +42,7 @@
             </form>
         </div>
     </section>
-    <script src="/Proyecto Frontend/Proyecto_Bootcamp_Frontend/categorias/Categoria_3/categoria3.js"></script>
+    <script src="/Proyecto_Bootcamp_Frontend/categorias/Categoria_3/categoria3.js"></script>
     
 </body>
 </html>
