--- a/index.html
+++ b/index.html
@@ -6,10 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/Proyecto_Bootcamp_Frontend/style.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
-    
     <link rel="stylesheet" href="https://unpkg.com/transition-style">
     
-    <title>MotoByte Refacciones 1</title>
+    <title>MotoByte Refacciones</title>
 </head>
 <body>
     <header>
