--- a/quiensomos.html
+++ b/quiensomos.html
@@ -11,15 +11,15 @@
 </head>
 <body>
     <header>
-        <img class="img-logo" src="/Proyecto Frontend/Proyecto_Bootcamp_Frontend/images/logo.jpg" alt="Logo" transition-style="in:polygon:opposing-corners">
+        <img class="img-logo" src="/Proyecto_Bootcamp_Frontend/images/logo.jpg" alt="Logo" transition-style="in:polygon:opposing-corners">
         <button class="abrir-menu" id="abrir"><i class="bi bi-list"></i></button>
         <nav class="nav" id="nav">
             <button class="cerrar-menu" id="cerrar"><i class="bi bi-x-circle"></i></button>
             <ul class="nav-list">
-                <li><a href="/Proyecto Frontend/Proyecto_Bootcamp_Frontend/index.html" transition-style="in:polygon:opposing-corners">Inicio</a></li>
-                <li><a href="/Proyecto Frontend/Proyecto_Bootcamp_Frontend/productos.html" transition-style="in:polygon:opposing-corners">Productos</a></li>
-                <li><a href="/Proyecto Frontend/Proyecto_Bootcamp_Frontend/quiensomos.html" transition-style="in:polygon:opposing-corners">Quienes somos</a></li>
-                <li><a href="/Proyecto Frontend/Proyecto_Bootcamp_Frontend/contacto.html" transition-style="in:polygon:opposing-corners">Contacto</a></li>
+                <li><a href="/Proyecto_Bootcamp_Frontend/index.html" transition-style="in:polygon:opposing-corners">Inicio</a></li>
+                <li><a href="/Proyecto_Bootcamp_Frontend/productos.html" transition-style="in:polygon:opposing-corners">Productos</a></li>
+                <li><a href="/Proyecto_Bootcamp_Frontend/quiensomos.html" transition-style="in:polygon:opposing-corners">Quienes somos</a></li>
+                <li><a href="/Proyecto_Bootcamp_Frontend/contacto.html" transition-style="in:polygon:opposing-corners">Contacto</a></li>
             </ul>
         </nav>
     </header>
@@ -28,6 +28,6 @@
             <h4>Somos una empresa orgullosamente Mexicana</h4>
         </div>
     </section>
-    <script src="/Proyecto Frontend/Proyecto_Bootcamp_Frontend/quiensomos.js"></script>
+    <script src="/Proyecto_Bootcamp_Frontend/quiensomos.js"></script>
 </body>
 </html>
