--- a/productos.html
+++ b/productos.html
@@ -108,7 +108,7 @@
             <div class="container">
                 <a href="/Proyecto_Bootcamp_Frontend/categorias/Categoria_9/categoria9.html">
                 <img src="/Proyecto_Bootcamp_Frontend/images/productos/photo-2023-05-15-10-12-40-4.webp" 
-                alt="Porta estrellas"  loading="lazy">
+                alt="Porta estrellas"  loading="lazy"></a>
                 <div class="a-p">
                     <p>Porta Estrellas</p>
                         <a class="a-comprar" href="/Proyecto_Bootcamp_Frontend/categorias/Categoria_9/categoria9.html">Ver más</a>
