--- a/index.html
+++ b/index.html
@@ -27,10 +27,16 @@
 
     <section>
         <div class="container">
+            <div>
+                <img class="motos" src="/Proyecto_Bootcamp_Frontend/images/moto2.webp" 
+                alt="Moto1"  loading="lazy">
+            </div>
+            <div>
 
+            </div>
         </div>
     </section>
-    <footer>
+    <footer class="floor">
         <h6>2023</h6>
     </footer>
     <script src="/Proyecto_Bootcamp_Frontend/main.js"></script>
