--- a/index.html
+++ b/index.html
@@ -32,7 +32,12 @@
                 alt="Moto1"  loading="lazy">
             </div>
             <div>
-
+                <img class="banner" src="/Proyecto_Bootcamp_Frontend/images/texto-1.webp" 
+                alt="banner" loading="lazy">
+            </div>
+            <div>
+                <img class="banner-2" src="/Proyecto_Bootcamp_Frontend/images/texto2.webp" 
+                alt="banner" loading="lazy">
             </div>
         </div>
     </section>
