--- a/index.html
+++ b/index.html
@@ -32,12 +32,10 @@
                 alt="Moto1"  loading="lazy">
             </div>
             <div>
-                <img class="banner" src="/Proyecto_Bootcamp_Frontend/images/texto-1.webp" 
-                alt="banner" loading="lazy">
+                <h3 class="banner">TODO LO QUE TÚ MOTO NECESITA</h3>
             </div>
             <div>
-                <img class="banner-2" src="/Proyecto_Bootcamp_Frontend/images/texto2.webp" 
-                alt="banner" loading="lazy">
+                <h3 class="banner-2">LO ENCUENTRAS EN </br>"MOTOBYTE REFACCIONES" </h3>
             </div>
         </div>
     </section>
