--- a/index.html
+++ b/index.html
@@ -38,7 +38,10 @@
                 <h3 class="banner">TODO LO QUE TÚ MOTO NECESITA</h3>
             </div>
             <div>
-                <h3 class="banner-2">LO ENCUENTRAS EN </br>"MOTOBYTE REFACCIONES" </h3>
+                <h3 class="banner-2">LO ENCUENTRAS EN </h3>
+            </div>
+            <div>
+                <h2 class="banner-3" >MOTOBYTE  REFACCIONES</h2>
             </div>
         </div>
     </section>
