--- a/categorias/Categoria_2/categoria2.html
+++ b/categorias/Categoria_2/categoria2.html
@@ -7,7 +7,10 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
     <link rel="stylesheet" href="/Proyecto_Bootcamp_Frontend/categorias/Categoria_2/categoria2.css">
     <link rel="stylesheet" href="https://unpkg.com/transition-style">
-
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Heebo:wght@300&family=Merriweather:wght@700&display=swap" rel="stylesheet">
+    
     <title>Balatas Delanteras</title>
 </head>
 <body>
@@ -35,7 +38,7 @@
                 <label for="phone">Telefono</label>
                 <input type="text" name="phone">
 
-                <label>Selecciona el Escape de tu interes</label>
+                <label>Selecciona el Escape que deseas</label>
                 <select name="product-id" id="products-select">
                 </select>
                 <button>Enviar</button>
