--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         </div>
     </section>
     <footer class="floor">
-        <h6 class="registro"> ® 2023 </h6>
+        <h6 class="registro"> 2023 ®  </h6>
     </footer>
     <script src="/Proyecto_Bootcamp_Frontend/main.js"></script>
 </body>
