--- a/categorias/Categoria_2/categoria2.html
+++ b/categorias/Categoria_2/categoria2.html
@@ -40,7 +40,7 @@
                 <label for="phone">Telefono</label>
                 <input type="tel" name="telefono" required>
 
-                <label>Selecciona el Escape que deseas</label>
+                <label>Selecciona las Balatas que deseas</label>
                 <select name="product-id" id="products-select">
                 </select>
                 <button>Enviar</button>
