--- a/categorias/Categoria_5/categoria5.html
+++ b/categorias/Categoria_5/categoria5.html
@@ -40,7 +40,7 @@
                 <label for="phone">Telefono</label>
                 <input type="text" name="phone">
 
-                <label>Selecciona el Escape de tu interes</label>
+                <label>Selecciona el Candado de tu interes</label>
                 <select name="product-id" id="products-select">
                 </select>
                 <button>Enviar</button>
