--- a/categorias/Categoria_6/categoria6.html
+++ b/categorias/Categoria_6/categoria6.html
@@ -7,12 +7,17 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
     <link rel="stylesheet" href="/Proyecto_Bootcamp_Frontend/categorias/Categoria_6/categoria6.css">
     <link rel="stylesheet" href="https://unpkg.com/transition-style">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Heebo:wght@300&family=Merriweather:wght@700&display=swap" rel="stylesheet">
 
     <title>Reguladores</title>
 </head>
 <body>
     <header>
-        <img class="img-logo" src="/Proyecto_Bootcamp_Frontend/images/logo.jpg" alt="Logo" transition-style="in:polygon:opposing-corners">
+        <a href="/Proyecto_Bootcamp_Frontend/index.html">
+        <img class="img-logo" src="/Proyecto_Bootcamp_Frontend/images/logo.jpg" 
+        href="/Proyecto_Bootcamp_Frontend/index.html" alt="Logo" transition-style="in:polygon:opposing-corners"></a>
         <button class="abrir-menu" id="abrir"><i class="bi bi-list"></i></button>
         <nav class="nav" id="nav">
             <button class="cerrar-menu" id="cerrar"><i class="bi bi-x-circle"></i></button>
@@ -35,7 +40,7 @@
                 <label for="phone">Telefono</label>
                 <input type="text" name="phone">
 
-                <label>Selecciona el Escape de tu interes</label>
+                <label>Selecciona el Regulador de tu interes</label>
                 <select name="product-id" id="products-select">
                 </select>
                 <button>Enviar</button>
