--- a/categorias/Categoria_5/categoria5.html
+++ b/categorias/Categoria_5/categoria5.html
@@ -34,11 +34,11 @@
         <div class="container">
             <form id="products" action="https://formspree.io/f/xvonnbbk" method="POST">
                 <label for="nombre">Nombre Completo</label>
-                <input type="text" name="nombre"  >
+                <input type="text" name="nombre" required>
                 <label for="email">Correo electrónico</label>
-                <input type="email" name="email" id="email">
+                <input type="email" name="email" id="email" required>
                 <label for="phone">Telefono</label>
-                <input type="text" name="phone">
+                <input type="text" name="phone" required>
 
                 <label>Selecciona el Candado de tu interes</label>
                 <select name="product-id" id="products-select">
