--- a/categorias/Categoria_12/categoria12.html
+++ b/categorias/Categoria_12/categoria12.html
@@ -5,19 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
-    <link rel="stylesheet" href="/Proyecto_Bootcamp_Frontend/categorias/Categoria_2/categoria2.css">
+    <link rel="stylesheet" href="/Proyecto_Bootcamp_Frontend/categorias/Categoria_9/categoria9.css">
     <link rel="stylesheet" href="https://unpkg.com/transition-style">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Heebo:wght@300&family=Merriweather:wght@700&display=swap" rel="stylesheet">
-    
-    <title>Balatas Delanteras</title>
+
+    <title>Porta Estrellas</title>
 </head>
 <body>
     <header>
-        <a href="/Proyecto_Bootcamp_Frontend/index.html">
-        <img class="img-logo" src="/Proyecto_Bootcamp_Frontend/images/logo.jpg" 
-        href="/Proyecto_Bootcamp_Frontend/index.html" alt="Logo" transition-style="in:polygon:opposing-corners"></a>
+        <img class="img-logo" src="/Proyecto_Bootcamp_Frontend/images/logo.jpg" alt="Logo" transition-style="in:polygon:opposing-corners">
         <button class="abrir-menu" id="abrir"><i class="bi bi-list"></i></button>
         <nav class="nav" id="nav">
             <button class="cerrar-menu" id="cerrar"><i class="bi bi-x-circle"></i></button>
@@ -34,20 +29,20 @@
         <div class="container">
             <form id="products" action="https://formspree.io/f/xvonnbbk" method="POST">
                 <label for="nombre">Nombre Completo</label>
-                <input type="text" name="nombre" required>
+                <input type="text" name="nombre"  >
                 <label for="email">Correo electrónico</label>
-                <input type="email" name="email" id="email" required>
+                <input type="email" name="email" id="email">
                 <label for="phone">Telefono</label>
-                <input type="tel" name="telefono" required>
+                <input type="text" name="phone">
 
-                <label>Selecciona las Balatas que deseas</label>
+                <label>Selecciona el Escape de tu interes</label>
                 <select name="product-id" id="products-select">
                 </select>
                 <button>Enviar</button>
             </form>
         </div>
     </section>
-    <script src="/Proyecto_Bootcamp_Frontend/categorias/Categoria_2/categoria2.js"></script>
+    <script src="/Proyecto_Bootcamp_Frontend/categorias/Categoria_9/categoria9.js"></script>
     
 </body>
 </html>
