--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <link rel="stylesheet" href="/Proyecto_Bootcamp_Frontend/style.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
     <link rel="stylesheet" href="https://unpkg.com/transition-style">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Heebo:wght@300&family=Merriweather:wght@700&display=swap" rel="stylesheet">
     
     <title>MotoByte Refacciones</title>
 </head>
@@ -27,11 +30,23 @@
 
     <section>
         <div class="container">
-
+            <div>
+                <img class="motos" src="/Proyecto_Bootcamp_Frontend/images/moto2.webp" 
+                alt="Moto1"  loading="lazy">
+            </div>
+            <div>
+                <h3 class="banner">TODO LO QUE TÚ MOTO NECESITA</h3>
+            </div>
+            <div>
+                <h3 class="banner-2">LO ENCUENTRAS EN </h3>
+            </div>
+            <div>
+                <h2 class="banner-3" >MOTOBYTE  REFACCIONES</h2>
+            </div>
         </div>
     </section>
-    <footer>
-        <h6>2023</h6>
+    <footer class="floor">
+        <h6 class="registro"> 2023 ®  </h6>
     </footer>
     <script src="/Proyecto_Bootcamp_Frontend/main.js"></script>
 </body>
