--- a/quiensomos.html
+++ b/quiensomos.html
@@ -4,14 +4,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/Proyecto Frontend/Proyecto_Bootcamp_Frontend/quiensomos.css">
+    <link rel="stylesheet" href="/Proyecto_Bootcamp_Frontend/quiensomos.css">
     <link rel="stylesheet" href="https://unpkg.com/transition-style">
-
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Heebo:wght@300&family=Merriweather:wght@700&display=swap" rel="stylesheet">
+    
     <title>Quienes Somos</title>
 </head>
 <body>
     <header>
-        <img class="img-logo" src="/Proyecto_Bootcamp_Frontend/images/logo.jpg" alt="Logo" transition-style="in:polygon:opposing-corners">
+        <a href="/Proyecto_Bootcamp_Frontend/index.html">
+        <img class="img-logo" src="/Proyecto_Bootcamp_Frontend/images/logo.jpg" 
+        href="/Proyecto_Bootcamp_Frontend/index.html" alt="Logo" transition-style="in:polygon:opposing-corners"></a>
         <button class="abrir-menu" id="abrir"><i class="bi bi-list"></i></button>
         <nav class="nav" id="nav">
             <button class="cerrar-menu" id="cerrar"><i class="bi bi-x-circle"></i></button>
@@ -25,7 +30,13 @@
     </header>
     <section>
         <div class="container">
-            <h4>Somos una empresa orgullosamente Mexicana</h4>
+            <div>
+                <img class="motos" src="/Proyecto_Bootcamp_Frontend/images/motos.webp" alt="motos" loading="lazy">
+                <img class="motos" src="/Proyecto_Bootcamp_Frontend/images/motos.webp" alt="motos" loading="lazy">
+                <img class="motos" src="/Proyecto_Bootcamp_Frontend/images/motos.webp" alt="motos" loading="lazy">
+                <img class="motos" src="/Proyecto_Bootcamp_Frontend/images/motos.webp" alt="motos" loading="lazy">
+            </div>
+            <h4 class="lema">Somos una empresa orgullosamente Mexicana</h4>
         </div>
     </section>
     <script src="/Proyecto_Bootcamp_Frontend/quiensomos.js"></script>
