--- a/quiensomos.html
+++ b/quiensomos.html
@@ -32,9 +32,9 @@
         <div class="container">
             <div>
                 <img class="motos" src="/Proyecto_Bootcamp_Frontend/images/motos.webp" alt="motos" loading="lazy">
-                <img class="motos" src="/Proyecto_Bootcamp_Frontend/images/motos.webp" alt="motos" loading="lazy">
-                <img class="motos" src="/Proyecto_Bootcamp_Frontend/images/motos.webp" alt="motos" loading="lazy">
-                <img class="motos" src="/Proyecto_Bootcamp_Frontend/images/motos.webp" alt="motos" loading="lazy">
+                <img class="motos2" src="/Proyecto_Bootcamp_Frontend/images/motos.webp" alt="motos" loading="lazy">
+                <img class="motos3" src="/Proyecto_Bootcamp_Frontend/images/motos.webp" alt="motos" loading="lazy">
+                <img class="motos4" src="/Proyecto_Bootcamp_Frontend/images/motos.webp" alt="motos" loading="lazy">
             </div>
             <h4 class="lema">Somos una empresa orgullosamente Mexicana</h4>
         </div>
