--- a/quiensomos.html
+++ b/quiensomos.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/Proyecto_Bootcamp_Frontend/quiensomos.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
     <link rel="stylesheet" href="https://unpkg.com/transition-style">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -32,9 +33,9 @@
         <div class="container">
             <div>
                 <img class="motos" src="/Proyecto_Bootcamp_Frontend/images/motos.webp" alt="motos" loading="lazy">
-                <img class="motos2" src="/Proyecto_Bootcamp_Frontend/images/motos.webp" alt="motos" loading="lazy">
-                <img class="motos3" src="/Proyecto_Bootcamp_Frontend/images/motos.webp" alt="motos" loading="lazy">
-                <img class="motos4" src="/Proyecto_Bootcamp_Frontend/images/motos.webp" alt="motos" loading="lazy">
+                <img class="motos" src="/Proyecto_Bootcamp_Frontend/images/motos.webp" alt="motos" loading="lazy">
+                <img class="motos" src="/Proyecto_Bootcamp_Frontend/images/motos.webp" alt="motos" loading="lazy">
+                <img class="motos" src="/Proyecto_Bootcamp_Frontend/images/motos.webp" alt="motos" loading="lazy">
             </div>
             <h4 class="lema">Somos una empresa orgullosamente Mexicana</h4>
         </div>
