--- a/quiensomos.html
+++ b/quiensomos.html
@@ -37,7 +37,9 @@
                 <img class="motos3" src="/Proyecto_Bootcamp_Frontend/images/motos.webp" alt="motos" loading="lazy">
                 <img class="motos4" src="/Proyecto_Bootcamp_Frontend/images/motos.webp" alt="motos" loading="lazy">
             </div>
-            <h4 class="lema">Somos una empresa orgullosamente Mexicana</h4>
+            <h4 class="lema" >Motobyte nace debido a la gran necesidad de partes y/o piezas de motocicletas en la región, </br>
+                fue entonces que hace 1 año nace esta idea, con el objetivo de brindar refacciones de todas las marcas y de alta calidad.</br>
+                Y claro, orgullosamente mexicana. </h4>
         </div>
     </section>
     <script src="/Proyecto_Bootcamp_Frontend/quiensomos.js"></script>
