--- a/quiensomos.html
+++ b/quiensomos.html
@@ -39,7 +39,7 @@
             </div>
             <h4 class="lema" >Motobyte nace debido a la gran necesidad de partes y/o piezas de motocicletas en la región,</h4>
                 <h4 class="lema2">fue entonces que hace 1 año nace esta idea, con el objetivo de brindar refacciones de todas las marcas y de alta calidad.</h4>
-                    <h4 class="lema3">claro, orgullosamente mexicana.</h4>
+                    <h4 class="lema3">Y claro, orgullosamente mexicana.</h4>
         </div>
     </section>
     <script src="/Proyecto_Bootcamp_Frontend/quiensomos.js"></script>
