--- a/categorias/Categoria_3/categoria3.html
+++ b/categorias/Categoria_3/categoria3.html
@@ -38,7 +38,7 @@
                 <label for="email">Correo electrónico</label>
                 <input type="email" name="email" id="email" required>
                 <label for="phone">Telefono</label>
-                <input type="tel" name="telefono" required>
+                <input type="tel" name="telefono" required maxlength="10">
 
                 <label>Selecciona el Cluth que deseas</label>
                 <select name="product-id" id="products-select">
