--- a/categorias/Categoria_9/categoria9.html
+++ b/categorias/Categoria_9/categoria9.html
@@ -38,7 +38,7 @@
                 <label for="email">Correo electrónico</label>
                 <input type="email" name="email" id="email" required>
                 <label for="phone">Telefono</label>
-                <input type="text" name="phone" required>
+                <input type="tel" name="telefono" required maxlength="10">
 
                 <label>Selecciona el Porta Estrella de tu interes</label>
                 <select name="product-id" id="products-select">
