--- a/categorias/Categoria_11/categoria11.html
+++ b/categorias/Categoria_11/categoria11.html
@@ -39,7 +39,7 @@
                 <label for="email">Correo electrónico</label>
                 <input type="email" name="email" id="email" required>
                 <label for="phone">Telefono</label>
-                <input type="text" name="phone" required>
+                <input type="tel" name="telefono" required maxlength="10">
 
                 <label>Selecciona la Llanta de tu interes</label>
                 <select name="product-id" id="products-select">
