--- a/contacto.html
+++ b/contacto.html
@@ -9,7 +9,7 @@
     <title>Contacto</title>
 </head>
 <header>
-    <img class="img-logo" src="/Proyecto_Bootcamp_Frontend/images/logo.jpg" alt="Logo" transition-style="in:polygon:opposing-corners">
+    <img class="img-logo" src="/Proyecto_Bootcamp_Frontend/images/logo.webp" alt="Logo" transition-style="in:polygon:opposing-corners">
     <button class="abrir-menu" id="abrir"><i class="bi bi-list"></i></button>
     <nav class="nav" id="nav">
         <button class="cerrar-menu" id="cerrar"><i class="bi bi-x-circle"></i></button>
