--- a/categorias/Categoria_10/categoria10.html
+++ b/categorias/Categoria_10/categoria10.html
@@ -17,7 +17,7 @@
 <body>
     <header>
         <a href="/Proyecto_Bootcamp_Frontend/index.html">
-        <img class="img-logo" src="/Proyecto_Bootcamp_Frontend/images/logo.jpg" 
+        <img class="img-logo" src="/Proyecto_Bootcamp_Frontend/images/logo.webp" 
         href="/Proyecto_Bootcamp_Frontend/index.html" alt="Logo" transition-style="in:polygon:opposing-corners"></a>
         <button class="abrir-menu" id="abrir"><i class="bi bi-list"></i></button>
         <nav class="nav" id="nav">
