--- a/categorias/Categoria_3/categoria3.html
+++ b/categorias/Categoria_3/categoria3.html
@@ -16,7 +16,7 @@
 <body>
     <header>
         <a href="/Proyecto_Bootcamp_Frontend/index.html">
-        <img class="img-logo" src="/Proyecto_Bootcamp_Frontend/images/logo.jpg" 
+        <img class="img-logo" src="/Proyecto_Bootcamp_Frontend/images/logo.webp" 
         href="/Proyecto_Bootcamp_Frontend/index.html" alt="Logo" transition-style="in:polygon:opposing-corners"></a>
         <button class="abrir-menu" id="abrir"><i class="bi bi-list"></i></button>
         <nav class="nav" id="nav">
@@ -38,7 +38,7 @@
                 <label for="email">Correo electrónico</label>
                 <input type="email" name="email" id="email" required>
                 <label for="phone">Telefono</label>
-                <input type="tel" name="telefono" required>
+                <input type="tel" name="telefono" required maxlength="10">
 
                 <label>Selecciona el Cluth que deseas</label>
                 <select name="product-id" id="products-select">
