--- a/categorias/Categoria_10/categoria10.html
+++ b/categorias/Categoria_10/categoria10.html
@@ -17,7 +17,7 @@
 <body>
     <header>
         <a href="/Proyecto_Bootcamp_Frontend/index.html">
-        <img class="img-logo" src="/Proyecto_Bootcamp_Frontend/images/logo.jpg" 
+        <img class="img-logo" src="/Proyecto_Bootcamp_Frontend/images/logo.webp" 
         href="/Proyecto_Bootcamp_Frontend/index.html" alt="Logo" transition-style="in:polygon:opposing-corners"></a>
         <button class="abrir-menu" id="abrir"><i class="bi bi-list"></i></button>
         <nav class="nav" id="nav">
@@ -39,7 +39,7 @@
                 <label for="email">Correo electrónico</label>
                 <input type="email" name="email" id="email" required>
                 <label for="phone">Telefono</label>
-                <input type="text" name="phone" required>
+                <input type="tel" name="telefono" required maxlength="10">
 
                 <label>Selecciona el Rin de tu interes</label>
                 <select name="product-id" id="products-select">
