--- a/quiensomos.html
+++ b/quiensomos.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/Proyecto_Bootcamp_Frontend/quiensomos.css">
     <link rel="stylesheet" href="https://unpkg.com/transition-style">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Heebo:wght@300&family=Merriweather:wght@700&display=swap" rel="stylesheet">
@@ -15,7 +16,7 @@
 <body>
     <header>
         <a href="/Proyecto_Bootcamp_Frontend/index.html">
-        <img class="img-logo" src="/Proyecto_Bootcamp_Frontend/images/logo.jpg" 
+        <img class="img-logo" src="/Proyecto_Bootcamp_Frontend/images/logo.webp" 
         href="/Proyecto_Bootcamp_Frontend/index.html" alt="Logo" transition-style="in:polygon:opposing-corners"></a>
         <button class="abrir-menu" id="abrir"><i class="bi bi-list"></i></button>
         <nav class="nav" id="nav">
@@ -36,7 +37,9 @@
                 <img class="motos3" src="/Proyecto_Bootcamp_Frontend/images/motos.webp" alt="motos" loading="lazy">
                 <img class="motos4" src="/Proyecto_Bootcamp_Frontend/images/motos.webp" alt="motos" loading="lazy">
             </div>
-            <h4 class="lema">Somos una empresa orgullosamente Mexicana</h4>
+            <h4 class="lema" >Motobyte nace debido a la gran necesidad de partes y/o piezas de motocicletas en la región,</h4>
+                <h4 class="lema2">fue entonces que hace 1 año nace esta idea, con el objetivo de brindar refacciones de todas las marcas y de alta calidad.</h4>
+                    <h4 class="lema3">Y claro, orgullosamente mexicana.</h4>
         </div>
     </section>
     <script src="/Proyecto_Bootcamp_Frontend/quiensomos.js"></script>
