--- a/categorias/Categoria_13/categoria13.html
+++ b/categorias/Categoria_13/categoria13.html
@@ -5,13 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
-    <link rel="stylesheet" href="/categorias/Categoria_3/categoria3.css">
+    <link rel="stylesheet" href="/categorias/Categoria_13/categoria13.css">
     <link rel="stylesheet" href="https://unpkg.com/transition-style">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Heebo:wght@300&family=Merriweather:wght@700&display=swap" rel="stylesheet">
 
-    <title>Clutchs Completos</title>
+    <title>Faros</title>
 </head>
 <body>
     <header>
@@ -33,20 +33,20 @@
         <div class="container">
             <form id="products" action="https://formspree.io/f/xvonnbbk" method="POST">
                 <label for="nombre">Nombre Completo</label>
-                <input type="text" name="nombre" required>
+                <input type="text" name="nombre" required >
                 <label for="email">Correo electrónico</label>
                 <input type="email" name="email" id="email" required>
                 <label for="phone">Telefono</label>
                 <input type="tel" name="telefono" required maxlength="10">
 
-                <label>Selecciona el Cluth que deseas</label>
+                <label>Selecciona los Faros de tu interes</label>
                 <select name="product-id" id="products-select">
                 </select>
                 <button>Enviar</button>
             </form>
         </div>
     </section>
-    <script src="/categorias/Categoria_3/categoria3.js"></script>
+    <script src="/categorias/Categoria_12/categoria12.js"></script>
     
 </body>
 </html>
