--- a/quiensomos.html
+++ b/quiensomos.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/Proyecto_Bootcamp_Frontend/quiensomos.css">
+    <link rel="stylesheet" href="/quiensomos.css">
     <link rel="stylesheet" href="https://unpkg.com/transition-style">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -15,32 +15,32 @@
 </head>
 <body>
     <header>
-        <a href="/Proyecto_Bootcamp_Frontend/index.html">
-        <img class="img-logo" src="/Proyecto_Bootcamp_Frontend/images/logo.webp" 
-        href="/Proyecto_Bootcamp_Frontend/index.html" alt="Logo" transition-style="in:polygon:opposing-corners"></a>
+        <a href="/index.html">
+        <img class="img-logo" src="/images/logo.webp" 
+        href="/index.html" alt="Logo" transition-style="in:polygon:opposing-corners"></a>
         <button class="abrir-menu" id="abrir"><i class="bi bi-list"></i></button>
         <nav class="nav" id="nav">
             <button class="cerrar-menu" id="cerrar"><i class="bi bi-x-circle"></i></button>
             <ul class="nav-list">
-                <li><a href="/Proyecto_Bootcamp_Frontend/index.html" transition-style="in:polygon:opposing-corners">Inicio</a></li>
-                <li><a href="/Proyecto_Bootcamp_Frontend/productos.html" transition-style="in:polygon:opposing-corners">Productos</a></li>
-                <li><a href="/Proyecto_Bootcamp_Frontend/quiensomos.html" transition-style="in:polygon:opposing-corners">Quienes somos</a></li>
+                <li><a href="/index.html" transition-style="in:polygon:opposing-corners">Inicio</a></li>
+                <li><a href="/productos.html" transition-style="in:polygon:opposing-corners">Productos</a></li>
+                <li><a href="/quiensomos.html" transition-style="in:polygon:opposing-corners">Quienes somos</a></li>
             </ul>
         </nav>
     </header>
     <section>
         <div class="container">
             <div>
-                <img class="motos" src="/Proyecto_Bootcamp_Frontend/images/motos.webp" alt="motos" loading="lazy">
-                <img class="motos2" src="/Proyecto_Bootcamp_Frontend/images/motos.webp" alt="motos" loading="lazy">
-                <img class="motos3" src="/Proyecto_Bootcamp_Frontend/images/motos.webp" alt="motos" loading="lazy">
-                <img class="motos4" src="/Proyecto_Bootcamp_Frontend/images/motos.webp" alt="motos" loading="lazy">
+                <img class="motos" src="/images/motos.webp" alt="motos" loading="lazy">
+                <img class="motos2" src="/images/motos.webp" alt="motos" loading="lazy">
+                <img class="motos3" src="/images/motos.webp" alt="motos" loading="lazy">
+                <img class="motos4" src="/images/motos.webp" alt="motos" loading="lazy">
             </div>
             <h4 class="lema" >Motobyte nace debido a la gran necesidad de partes y/o piezas de motocicletas en la región,</h4>
                 <h4 class="lema2">fue entonces que hace 1 año nace esta idea, con el objetivo de brindar refacciones de todas las marcas y de alta calidad.</h4>
                     <h4 class="lema3">Y claro, orgullosamente mexicana.</h4>
         </div>
     </section>
-    <script src="/Proyecto_Bootcamp_Frontend/quiensomos.js"></script>
+    <script src="/quiensomos.js"></script>
 </body>
 </html>
