--- a/quiensomos.html
+++ b/quiensomos.html
@@ -32,10 +32,10 @@
     <section>
         <div class="container">
             <div>
-                <img class="motos" src="/images/motos.webp" alt="motos" loading="lazy">
-                <img class="motos2" src="/images/motos.webp" alt="motos" loading="lazy">
-                <img class="motos3" src="/images/motos.webp" alt="motos" loading="lazy">
-                <img class="motos4" src="/images/motos.webp" alt="motos" loading="lazy">
+                <img class="motos" src="/Proyecto_Bootcamp_Frontend/images/motos.webp" alt="motos" loading="lazy">
+                <img class="motos2" src="/Proyecto_Bootcamp_Frontend/images/motos.webp" alt="motos" loading="lazy">
+                <img class="motos3" src="/Proyecto_Bootcamp_Frontend/images/motos.webp" alt="motos" loading="lazy">
+                <img class="motos4" src="/Proyecto_Bootcamp_Frontend/images/motos.webp" alt="motos" loading="lazy">
             </div>
             <h4 class="lema" >Motobyte nace debido a la gran necesidad de partes y/o piezas de motocicletas en la región,</h4>
                 <h4 class="lema2">fue entonces que hace 1 año nace esta idea, con el objetivo de brindar refacciones de todas las marcas y de alta calidad.</h4>
